@@ -13,7 +13,7 @@ package org.eclipse.cdt.autotools.tests;
 
 import junit.framework.TestCase;
 
-import org.eclipse.cdt.managedbuilder.core.ManagedCProjectNature;
+import org.eclipse.cdt.autotools.core.AutotoolsNewProjectNature;
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IResource;
 import org.eclipse.core.runtime.NullProgressMonitor;
@@ -49,7 +49,7 @@ public class AutotoolsProjectTest1 extends TestCase {
 	public void testAutotoolsProject1() throws Exception {
 		Path p = new Path("zip/project1.zip");
 		ProjectTools.addSourceContainerWithImport(testProject, "src", p, null, true);
-		assertTrue(testProject.hasNature(ManagedCProjectNature.MNG_NATURE_ID));
+		assertTrue(testProject.hasNature(AutotoolsNewProjectNature.AUTOTOOLS_NATURE_ID));
 		org.eclipse.core.runtime.Path x = new org.eclipse.core.runtime.Path("src/ChangeLog");
 		assertTrue(testProject.exists(x));
 		x = new org.eclipse.core.runtime.Path("src/configure");
